Fix mekong eye category alignment

--- a/themes/jeo-theme/assets/scss/5-pages/_p-archive.scss
+++ b/themes/jeo-theme/assets/scss/5-pages/_p-archive.scss
@@ -3,6 +3,10 @@
 }
 
 .archive { 
+    h1.page-title.article-section-title {
+        display: flex;
+    }
+    
     article {
         &.entry{
             margin-top: 30px;
